welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: value lenght is not a member of Array[java.awt.Color]
  for( i<-0 to c.lenght-1 )
                 ^Array1:9: error: not found: value getColorSol
    c(i) = getColorSol()
           ^Array1:28: error: not found: value c
  for(i <- c )
           ^Array1:30: error: not found: value setBrosseCouleur
    setBrosseCouleur(i)
    ^